tests/language_modules/08_routines/invalid_semantics/call_requires_procedure.vf
module CallRequiresProcedure

function count() returns Integer
is
    return 1
end count

procedure main()
is
    call count()
end main

end CallRequiresProcedure